# codspeed-trial

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  setup.py
.github/workflows/: codspeed.yml  glum_benchmarks.yml
src/codspeed_trial/: __init__.py  cpp_ext.cpp  cy_ext.c  cy_ext.pyx  glum_thing.py
tests/: test_benchmarks.py  test_glum_codspeed.py  test_glum_non_instrumented.py  test_non_instrumented.py
