[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0", "numpy>=1.26"]
build-backend = "setuptools.build_meta"

[project]
name = "codspeed-trial"
version = "0.1.0"
description = "Test package for evaluating CodSpeed benchmarking service"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-codspeed>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
